--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/esbenp/react-native-clean-form/issues"
   },
   "homepage": "https://github.com/esbenp/react-native-clean-form#readme",
-  "dependencies": {
+  "peerDependencies": {
     "react-native": "^0.40.0",
     "react-native-vector-icons": "^3.0.0",
     "styled-components": "^1.2.1"
