--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "homepage": "https://github.com/esbenp/react-native-clean-form#readme",
   "peerDependencies": {
-    "react-native": "^0.40.0",
-    "react-native-vector-icons": "^3.0.0",
-    "styled-components": "^1.2.1"
+    "react-native": ">0.39.0 <1.0.0",
+    "react-native-vector-icons": ">=3.0.0",
+    "styled-components": ">1.2.0 <2.0.0"
   },
   "devDependencies": {
   },
